--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,11 @@
 	<string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
 	<string name="attachment_summary_off">Only download attachments when manually requested</string>
 	<string name="default_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at nisl posuere libero laoreet pulvinar. Sed mauris metus, vulputate eu volutpat nec, cursus non augue. Nulla ac quam leo. Cras tincidunt maximus justo, id elementum metus. Donec tempus ipsum a eros ultrices egestas. Pellentesque accumsan orci ut erat sollicitudin, in convallis libero pretium. Duis blandit elementum nibh eu tempor. Vivamus accumsan, dui vestibulum fringilla commodo, odio magna commodo lectus, ac tempor augue augue vel sem. Duis non eleifend dui, ut imperdiet tellus.</string>
+	<string name="please_wait">Please Wait</string>
+	<string name="cancel">Cancel</string>
+	<string name="username">Username</string>
+	<string name="password">Password</string>
+	<string name="sumbit">Sumbit</string>
+	<string name="forget_password">Forget Password</string>
+	<string name="app_icon">App Icon</string>
 </resources>
