--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,5 +67,6 @@
 	<string name="post_text3">Got a story to tell?</string>
 	<string name="post_text4">Life is great, isn\'t it?</string>
 	<string name="post_text5">Tell the world!</string>
+	<string name="back">Back</string>
 
 </resources>
