User Profile Foundations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,5 +72,6 @@
 	<string name="Following">Following</string>
 	<string name="Follow">Follow</string>
 	<string name="Loading">Loading</string>
+	<string name="report">Report</string>
 
 </resources>
