--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,4 +210,5 @@
 	<string name="select">Select</string>
 	<string name="no_messages">No Messages</string>
 	<string name="chat">Chat</string>
+	<string name="info">Info</string>
 </resources>
