Code Clean-Up & Minor Fixes & Typo Fix

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -190,6 +190,7 @@
 	<string name="picture_saved">图标已保存</string>
 	<string name="info">信息</string>
 	<string name="picture_save_error">保存图片错误</string>
+	<string name="successfully_removed_from_collections">成功移除收藏</string>
 
 
 </resources>
