--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,8 +73,8 @@
 	<string name="min1">1 min ago</string>
 	<string name="min5">5 min ago</string>
 	<string name="min10">10 min ago</string>
-	<string name="half_an_hour">Half an hour</string>
-	<string name="an_hour">An hour</string>
+	<string name="half_an_hour">Half an hour ago</string>
+	<string name="an_hour">An hour ago</string>
 	
 	<string name="repost_from">\"Repost From \"</string>
 	<string name="successfully_added_to_collection">Successfully Added to Collection</string>
@@ -214,4 +214,7 @@
 	<string name="picture_saved">Picture Saved</string>
 	<string name="picture_save_error">Error Saving Picture</string>
 	<string name="successfully_removed_from_collections">Successfully Removed From Collections</string>
+	<string name="you_need_to_update_the_app">You need to update the app</string>
+	<string name="already_the_newest_version">Already the newest version</string>
+	<string name="you_are_ahead_of_the_newest_verion">You are ahead of the newest verion</string>
 </resources>
