--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -191,6 +191,16 @@
 	<string name="info">信息</string>
 	<string name="picture_save_error">保存图片错误</string>
 	<string name="successfully_removed_from_collections">成功移除收藏</string>
+	<string name="you_need_to_update_the_app">新版本可更新</string>
+	<string name="already_the_newest_version">已是最新版</string>
+	<string name="you_are_ahead_of_the_newest_verion">你比最新版还要新</string>
+	<string name="confirm_email">确认邮箱</string>
+	<string name="find_password">找回密码</string>
+	<string name="send_reset_email">发送重置邮箱</string>
+	<string name="confirm_email_is_not_matched">确认邮箱不匹配</string>
+	<string name="empty_confirm_email">确认邮箱为空</string>
+	<string name="successfully_send_reset_password_email">成功发送重置密码邮箱</string>
+	<string name="error_sending_email">发送邮箱失败</string>
 
 
 </resources>
